# osrswiki_images

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/osrswiki_images/: __init__.py  cli.py  client.py
tests/: test_integration.py
